# rusty-epanet

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  build.rs  wrapper.h
.github/workflows/: rust.yml
src/: bindings.rs  epanet_error.rs  error_messages.rs  lib.rs  types.rs
src/impls/: collections.rs  control.rs  curve.rs  demand.rs  hydraulic.rs  link.rs  mod.rs  node.rs  options.rs  pattern.rs  project.rs  quality.rs  report.rs  rule.rs
src/impls/test_utils/: fixtures.rs  mod.rs
src/types/: analysis.rs  control.rs  curve.rs  demand.rs  link.rs  mod.rs  node.rs  options.rs  pattern.rs  report.rs  rule.rs  types.rs
tests/: integration.rs
