[package]
name = "epanet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["static-link"]
static-link = []
dynamic-link = []

[dependencies]
num-traits = "0.2.19"
num-derive = "0.4.2"

[dev-dependencies]
rstest = "0.18"
strum = "0.27.2"
strum_macros = "0.27.2"

[build-dependencies]
bindgen = "0.72.0"
cmake = "0.1.57"
