[package]
name = "epanet"
version = "0.3.0"
edition = "2021"
description = "Safe Rust bindings to the EPANET 2.3 water distribution network simulator"
license = "MIT"
repository = "https://github.com/cameron-devine/rusty-epanet"
readme = "README.md"
keywords = ["epanet", "water", "hydraulics", "simulation", "water-distribution"]
categories = ["science", "api-bindings"]

[features]
default = ["static-link"]
static-link = ["epanet-sys/static-link"]
dynamic-link = ["epanet-sys/dynamic-link"]

[dependencies]
epanet-sys = "2.3.0"
num-traits = "0.2.19"
num-derive = "0.4.2"

[dev-dependencies]
rstest = "0.18"
strum = "0.27.2"
strum_macros = "0.27.2"